Add gradle publishing config, remove remaining player usage